; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/gas/config/extr_tc-arc.c_arc_set_ext_seg.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/gas/config/extr_tc-arc.c_arc_set_ext_seg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@arcext_section = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [11 x i8] c".arcextmap\00", align 1
@stdoutput = common dso_local global i32 0, align 4
@SEC_READONLY = common dso_local global i32 0, align 4
@SEC_HAS_CONTENTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @arc_set_ext_seg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arc_set_ext_seg() #0 {
  %1 = load i64, i64* @arcext_section, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %11, label %3

3:                                                ; preds = %0
  %4 = call i64 @subseg_new(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 0)
  store i64 %4, i64* @arcext_section, align 8
  %5 = load i32, i32* @stdoutput, align 4
  %6 = load i64, i64* @arcext_section, align 8
  %7 = load i32, i32* @SEC_READONLY, align 4
  %8 = load i32, i32* @SEC_HAS_CONTENTS, align 4
  %9 = or i32 %7, %8
  %10 = call i32 @bfd_set_section_flags(i32 %5, i64 %6, i32 %9)
  br label %14

11:                                               ; preds = %0
  %12 = load i64, i64* @arcext_section, align 8
  %13 = call i32 @subseg_set(i64 %12, i32 0)
  br label %14

14:                                               ; preds = %11, %3
  ret i32 1
}

declare dso_local i64 @subseg_new(i8*, i32) #1

declare dso_local i32 @bfd_set_section_flags(i32, i64, i32) #1

declare dso_local i32 @subseg_set(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
